# polybench-noarr

./: .gitignore  CMakeLists.txt  autotune.err  autotune.out  autotune.sh  bs.md  build.sh  collect.sh  collect_numbers.sh  compare-ignore.txt  compare.sh  run_algorithm.sh  run_c_algorithm.sh  run_noarr_algorithm.sh  sbatch_autotune.sh  sbatch_compare.sh
datamining/correlation/: correlation.cpp  correlation.hpp
datamining/covariance/: covariance.cpp  covariance.hpp
include/: defines.hpp
linear-algebra/blas/gemm/: gemm.cpp
linear-algebra/blas/gemver/: gemver.cpp
linear-algebra/blas/gesummv/: gesummv.cpp
linear-algebra/blas/symm/: symm.cpp
linear-algebra/blas/syr2k/: syr2k.cpp
linear-algebra/blas/syrk/: syrk.cpp
linear-algebra/blas/trmm/: trmm.cpp
linear-algebra/kernels/2mm/: 2mm.cpp  2mm.hpp
linear-algebra/kernels/3mm/: 3mm.cpp  3mm.hpp
linear-algebra/kernels/atax/: atax.cpp
linear-algebra/kernels/bicg/: bicg.cpp
linear-algebra/kernels/doitgen/: doitgen.cpp
linear-algebra/kernels/mvt/: mvt.cpp
linear-algebra/solvers/cholesky/: cholesky.cpp
linear-algebra/solvers/durbin/: durbin.cpp
linear-algebra/solvers/gramschmidt/: gramschmidt.cpp  gramschmidt.hpp
linear-algebra/solvers/lu/: lu.cpp
linear-algebra/solvers/ludcmp/: ludcmp.cpp
linear-algebra/solvers/trisolv/: trisolv.cpp
medley/deriche/: deriche.cpp
medley/floyd-warshall/: floyd-warshall.cpp
medley/nussinov/: nussinov.cpp
stencils/adi/: adi.cpp
stencils/fdtd-2d/: fdtd-2d.cpp
stencils/heat-3d/: heat-3d.cpp
stencils/jacobi-1d/: jacobi-1d.cpp
stencils/jacobi-2d/: jacobi-1d.cpp  jacobi-2d.cpp
stencils/seidel-2d/: seidel-2d.cpp
